data/derived/comb/progs/unify/prog8812.ml.out
Characters 122-123:
  let seen' = if List.mem (h t)
                             ^
Error: This expression has type ('a -> 'b) list
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a -> 'b) list
